git finder commit

--- a/PBL_assignment03/index.html
+++ b/PBL_assignment03/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./styles/footer.css">
   <link rel="stylesheet" href="./styles/main.css">
   <link rel="stylesheet" href="./styles/header.css">
+  <script src="main.js" defer></script>
 </head>
 <body class="body_container">
   <header class="header_container">
