--- a/PBL_assignment03/index.html
+++ b/PBL_assignment03/index.html
@@ -22,7 +22,7 @@
   <main class="main_container">
     <div class="profile_zone">
       <div class="person_view-button_image">
-        <div class="profile_image"><img></div>
+        <div class="profile_image"></div>
         <button class="view_button">View Profile</button>
       </div>
       <div class="person_information">
@@ -43,14 +43,7 @@
     <div class="latest_repo_zone">
       <h2>Latest Repos</h2>
       <div class="latest_repos">
-        <div class="section">
-          <div class="repo_name"><p>react-disney-deploy-test</p></div>
-          <div class="additory_information">
-            <div class="detail_of_additory_information" id="star">Stars: </div>
-            <div class="detail_of_additory_information" id="whatcher">Whatchers: </div>
-            <div class="detail_of_additory_information" id="fork">Forks: </div>
-          </div>
-        </div>
+        
       </div>
     </div>
   </main>
